Reverted to non-overflowed image due to display issues on mobile

--- a/SkillPath/angular/app/templates/tutorial-card/tutorial-card.component.css
+++ b/SkillPath/angular/app/templates/tutorial-card/tutorial-card.component.css
@@ -15,10 +15,11 @@
 }*/
 
 .img-container {
-    max-height: 300px;
+    max-height: 250px;
     overflow: hidden;
     margin: 0 -24px 16px -24px;
     width: calc(100% + 48px);
+    text-align: center;
 }
 
 @media (max-width: 600px) {
